moving template to ward texting tool

--- a/app/views/about.jade
+++ b/app/views/about.jade
@@ -1,2 +1,5 @@
 h3 About
-p 2 parts magic, 3 parts pure organic awesome extract
+p LDS.org isn't built for YSA wards. We're a family-centered church and lds.org is a family centered app.
+p YSAWards.org uses LDS.org, but provides the missing tools that are essential for wards where 10% of the membership changes each semester and 50+% changes each school year.
+p I created this site because after 6 years of being in singles wards I realized that the most common problems can be solved in one place without each ward re-inventing the wheel time and time again.
+p :-)
