--- a/app/views/nav.jade
+++ b/app/views/nav.jade
@@ -6,4 +6,4 @@
   ul.nav.nav-pills.pull-right
     li(ng-repeat="tab in N.tabs", ng-class="{ active: tab.active }")
       a(ng-href="{{tab.href}}") {{ tab.title }}
-  h3.text-muted Harry Potter Sorting Hat Quiz!
+  h3.text-muted YSA Wards
