made more awesome, still missing text sending ability

--- a/app/views/main.jade
+++ b/app/views/main.jade
@@ -59,7 +59,100 @@
       div(ng-if="M.ward && M.sms.length > 0 && M.sms.length <= 140 && ('ward' === M.group || M.wards)")
         a.btn.btn-lg.btn-success(ng-click="M.next()") Let's Continue!
 
-  .row.marketing(ng-if="3 == M.step")
+  .row(ng-if="3 == M.step")
+    .col-md-12
+      h3 Uncheck anyone that you want to omit
+
+      form.navbar-form(role="search")
+        .input-group-btn
+          input.form-control(ng-model="M.searchText", ng-change="M.debounceSearchText()", type="search", placeholder="Search")
+          //-.input-button-group
+            .btn.btn-info
+              span.glyphicon.glyphicon-search
+
+      .col-md-12.checkbox(
+      , ng-attr-style="height: 48px; position: relative; background-color: #F0F0F0"
+      )
+        label
+          div(style="float: left; height: 48px; padding: 6px;")
+          div(style="float: left; height: 48px; width: 84px; padding: 5px")
+            center Pictures
+          div(style="float: left; height: 48px; width: 180px; padding: 5px;")
+            span Name
+          div(style="float: left; height: 48px; width: 120px; padding: 5px;")
+            div(style="float: right;")
+              span Phone Numbers
+            div(style="clear: both;")
+          div(style="float: right; height: 48px; width: 240px; padding: 5px;")
+            div(style="float: right;")
+              span Email Addresses
+            div(style="clear: both;")
+          div(style="clear: both;")
+
+      .col-md-12.checkbox(
+        ng-repeat="member in M.households | filter:M.searchTextDebounced"
+      , ng-attr-style="height: 48px;position: relative; background-color: {{'FEMALE' == member.gender && '#FFF9FA' || '#F0FFFF' }}"
+      )
+        label
+          div(style="float: left; height: 48px; padding: 6px;")
+            input(type="checkbox", ng-model="member.include")
+          div(style="float: left; height: 48px; width: 84px; padding-top: 5px; padding-bottom: 5px;")
+            center
+              img(
+                ng-if="member.headOfHousehold.imageData"
+              , style="height: 48px;"
+              , ng-src="{{member.headOfHousehold.imageData}}"
+              )
+              img(
+                ng-if="member.householdInfo.imageData"
+              , style="height: 48px;"
+              , ng-src="{{member.householdInfo.imageData}}"
+              )
+          div(style="float: left; height: 48px; width: 180px; padding: 5px;")
+            span(ng-bind="member.headOfHousehold.name")
+          div(style="float: left; height: 48px; width: 120px; padding: 5px;")
+            div(style="float: right;")
+              span(ng-bind="member.headOfHousehold.phone")
+            div(style="clear: both;")
+            div(style="float: right;")
+              span(ng-bind="member.householdInfo.phone")
+            div(style="clear: both;")
+          div(style="float: right; height: 48px; width: 240px; padding: 5px;")
+            div(style="float: right;")
+              span(ng-bind="member.headOfHousehold.email")
+            div(style="clear: both;")
+            div(style="float: right;")
+              span(ng-bind="member.householdInfo.email")
+            div(style="clear: both;")
+          div(style="clear: both;")
+     
+      //-table.table.table-striped
+        tr
+          th 
+          th Pic
+          th Name
+          th Number
+          th Number
+          th Email
+          th Email
+        tr.checkbox(
+          ng-repeat="member in M.households | filter:searchText"
+        , ng-attr-style="background-color: {{'FEMALE' == member.gender && '#FDD7E4' || '#ADDFFF' }}"
+        )
+          label
+            td
+              input(type="checkbox", ng-model="member.headOfHousehold.exclude", ng-checked="!member.headOfHousehold.exclude")
+            td
+              img(style="height: 48px;", ng-src="{{member.headOfHousehold.imageData || member.householdInfo.imageData}}")
+            td(ng-bind="member.headOfHousehold.name")
+            td(ng-bind="member.headOfHousehold.phone")
+            td(ng-bind="member.householdInfo.phone")
+            td(ng-bind="member.headOfHousehold.email")
+            td(ng-bind="member.householdInfo.email")
+
+      a.btn.btn-lg.btn-success(ng-click="M.next()") Next!
+
+  .row(ng-if="4 == M.step")
     .col-md-10
       h3 Last step: We'll need to use your email account.
 
@@ -93,7 +186,7 @@
 
       a.btn.btn-lg.btn-success(ng-click="M.next()") Send
 
-  .row.marketing(ng-if="4 == M.step")
+  .row.marketing(ng-if="5 == M.step")
     .col-md-10
       h3 Thank you, Come again!
 
@@ -104,6 +197,6 @@
 
       a.btn.btn-lg.btn-success(ng-click="M.next()") You bet I will!
 
-  .row.marketing(ng-if="5 == M.step")
+  .row.marketing(ng-if="6 == M.step")
     .col-md-10
       h3 Dang straight.
