--- a/app/views/account.jade
+++ b/app/views/account.jade
@@ -7,7 +7,7 @@ div
     li [[ http://example.com/bar ]] [unassociate and delete] (no other sign-ins are linked)
 
 div
-  button.btn.btn-block.btn-social.btn-lg.btn-ldsauth(type="button", ng-click="L.loginWithLds()")
+  button.btn.btn-block.btn-social.btn-lg.btn-ldsconnect(type="button", ng-click="L.loginWithLds()")
     i.fa
       img(src="/images/moroni.png")
     span.signin Connect with LDS.org
