--- a/app/views/login.jade
+++ b/app/views/login.jade
@@ -12,7 +12,7 @@
       .row
         .col-md-6
           .option
-            button.btn.btn-block.btn-social.btn-lg.btn-ldsauth(type="button", ng-click="L.loginWithLds()")
+            button.btn.btn-block.btn-social.btn-lg.btn-ldsconnect(type="button", ng-click="L.loginWithLds()")
               i.fa
                 img(src="/images/moroni.png")
               span.signin Sign In with LDS.org
